--- a/forecast/src/main/resources/config/httpproxy.properties
+++ b/forecast/src/main/resources/config/httpproxy.properties
@@ -7,4 +7,4 @@ proxy.password=
 #rest connect timeout setting
 rest.readtimeout=15000
 rest.connecttimeout=10000
-mock.enabled=${MOCK_ENABLED:true}
+mock.enabled=${MOCK_ENABLED:false}
