--- a/weather/src/main/resources/config/httpproxy.properties
+++ b/weather/src/main/resources/config/httpproxy.properties
@@ -7,6 +7,6 @@ proxy.password=
 #rest connect timeout setting
 rest.readtimeout=15000
 rest.connecttimeout=10000
-mock.enabled=${MOCK_ENABLED:true}
+mock.enabled=${MOCK_ENABLED:false}
 randomException.enabled=${RANDOMEXCEPTION_ENABLED:false}
 timewait.enabled=${TIMEWAIT_ENABLED:false}
